# RedOS

./: Cargo.toml  README.md  convertImage.py  test.txt  test2.txt
.cargo/: config.toml
interface/: Cargo.toml
interface/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: interrupts.rs  lib.rs  main.rs
kernel/src/memory/: mod.rs
kernel/src/memory/allocators/: mod.rs
redos-std/: Cargo.toml
redos-std/src/: console.rs  lib.rs
src/: config.rs  interrupts.rs  lib.rs  main.rs
src/io/: german_layout.rs  keyboard.rs  mod.rs
src/memory/: allocator.rs
src/memory/allocators/: bump.rs  fixed_size_block.rs  linked_list.rs
src/programms/: mod.rs  test.rs  test2.rs
src/screen/: mod.rs  text_styling.rs  vga_display.rs  vga_pixel.rs  vga_text.rs
