[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
spin = "0.5.2"
x86_64 = "0.14.2"
linked_list_allocator = "0.9.0"
redos-std = { path = "../redos-std" }
interface = { path = "../interface" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33

